--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+  <%= link_to "Home", root_path %>
+  <%= link_to "About", welcome_about_path %>
+  <%= link_to "Contact", welcome_contact_path %>
+  <%= link_to "Features", welcome_features_path %>
+  <%= link_to "Portfolio", welcome_portfolio_path %>
+  <%= link_to "Resume", welcome_resume_path %>
+  <%= link_to "Invoices", invoices_path %>
+  <%= link_to "Login", root_path %>
+  
 <%= yield %>
 
 </body>
