--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>Dat2e</th>
+      <th>Date</th>
       <th>Company</th>
       <th>Tax</th>
       <th>Salesperson</th>
