--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,14 @@
     <li><%= link_to "Portfolio", welcome_portfolio_path %>
     <li><%= link_to "Resume", welcome_resume_path %></li>
     <li><%= link_to "Invoices", invoices_path %></li>
-    <li><%= link_to "Login", root_path %></li>
+    
+    <% if current_user %>
+    <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+    <% else %>
+    <li><%= link_to "Sign Up", new_user_registration_path %></li>
+    <li><%= link_to "Sign In", new_user_session_path %></li>
+    <% end %>
+    
   </ul>
   
   <p class="notice"><%= notice %></p>
