--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -30,12 +30,14 @@
             <%= f.text_field :tax %>
         </div>
       </div>
-      <div class="control-group">
-        <%= f.label :salesperson, class: 'control-label' %><br>
-        <div class="controls">
-            <%= f.text_field :salesperson %>
-        </div>
+     
+    <div class="control-group">
+            <%= f.label :salesperson, class: 'control-group' %>
+      <div class="controls">
+          <%= collection_select( :invoice, :employee_id, Employee.all, :id, :name, {}, { :multiple => false }) %>
       </div>
+    </div>
+  
      <div class="control-group">
        <%= f.label "Status", class: 'control-label' %>
        <div class="controls">
